<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_personagem"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raca" />

    <RadioGroup
        android:id="@+id/radioGrupoRaca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonHumano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humano"/>

        <RadioButton
            android:id="@+id/radioButtonAnjo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anjo"/>

        <RadioButton
            android:id="@+id/radioButtonDemonio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demonio"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classe"/>

    <RadioGroup
        android:id="@+id/radioGroupClasse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonProtetor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protetor"/>
        <RadioButton
            android:id="@+id/radioGroupDestrutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destrutor"/>

        <RadioButton
            android:id="@+id/radioGroupLider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lider"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poder"/>

    <SeekBar
        android:id="@+id/seekBarPoder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="20"/>

    <TextView
        android:id="@+id/textViewPoder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        tools:text="0"/>

    <CheckBox
        android:id="@+id/checkBoxVidaEterna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/possui_vida_eterna"/>

    <Button
        android:id="@+id/buttonConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/confirmar"
        android:layout_marginTop="20dp"/>

</LinearLayout>